--- a/views/docs.jade
+++ b/views/docs.jade
@@ -6,7 +6,7 @@ block content
     .row.affix-row
       .col-sm-3.col-md-2.affix-sidebar
         .sidebar-nav
-          .navbar.navbar-default(role='navigation' style='width:65%; padding: 1%')
+          .navbar.navbar-default(role='navigation')
             .navbar-header
               button.navbar-toggle(type='button', data-toggle='collapse', data-target='.sidebar-navbar-collapse')
                 span.icon-bar
