--- a/views/docs/dictionary.jade
+++ b/views/docs/dictionary.jade
@@ -240,7 +240,7 @@ pre.language-jade
       p!= __("This is a ~~strike~~")
 
       //superscript
-      p!= __("This is ^[1]")
+      p!= __("This is ^[text]")
       p!= __("This is ^[1](#bookmark)")
       p!= __("This is ^[[1]](#link-to-bookmarked-superscript)")
 h1#mustache #{__("dictionary.heading.mustache")}
