--- a/views/includes/intro.jade
+++ b/views/includes/intro.jade
@@ -3,7 +3,7 @@ section
     h1#introduction Introduction
     p
     |gengo.js is an i18n middleware that simply translates your phrases.
-    |It aims to ease the workflow by allowing you use three simple notations to access your definitions.
+    |It aims to ease the workflow by allowing you to use three simple notations to access your definitions.
     |gengo also supports file extensions with .js and .json, routing, plurality, multi-line phrases, locale override using cookies,
     |Mustache.js, Kawari.js, Moment.js, and Numeral.js.
   .note.panel.panel-info
