Fixed sentence in API.

--- a/views/includes/api.jade
+++ b/views/includes/api.jade
@@ -233,5 +233,5 @@ section
   .note.panel.panel-info
     .panel-heading Note
     .panel-body
-      |If your language or locale does is not in the
+      |If your language or locale is not in the
       |<a href="https://github.com/iwatakeshi/gengojs/tree/master/maps" target="_blank">maps</a> list, please Fork and Pull to improve gengo.js.
